# rs-snap7

./: .gitignore  Cargo.toml  LICENSE  README.md  README_CN.md
.cargo/: config.toml
bench-compare/: bench_c.c  bench_python.py  run_comparison.sh
crates/snap7-client/: Cargo.toml  README.md
crates/snap7-client/src/: client.rs  connection.rs  error.rs  lib.rs  plus_client.rs  plus_connection.rs  pool.rs  tag.rs  tls.rs  transport.rs  types.rs  udp.rs
crates/snap7-client/src/proto/: cotp.rs  error.rs  mod.rs  tpkt.rs
crates/snap7-client/src/proto/s7/: clock.rs  header.rs  mod.rs  negotiate.rs  read_var.rs  szl.rs  write_var.rs
crates/snap7-client/src/proto/s7commplus/: data.rs  frame.rs  integrity.rs  mod.rs  multivar.rs  session.rs  vlq.rs
crates/snap7-opcua-gateway/: Cargo.toml  OPC-UA_SUBSCRIPTIONS.md  README.md
crates/snap7-opcua-gateway/src/: config.rs  error.rs  lib.rs  poller.rs  registry.rs  server.rs
crates/snap7-partner/: Cargo.toml
crates/snap7-partner/src/: error.rs  lib.rs  partner.rs  proto.rs  transport.rs
crates/snap7-server/: Cargo.toml  README.md
crates/snap7-server/src/: dispatch.rs  error.rs  handshake.rs  lib.rs  server.rs  store.rs
snap7-bench/: Cargo.toml
snap7-bench/benches/: s7_ops.rs  s7_ops_sync.rs
snap7-bench/src/: lib.rs
snap7-cli/: Cargo.toml  README.md
snap7-cli/src/: args.rs  main.rs  output.rs
snap7-cli/src/cmd/: block.rs  clock.rs  diag.rs  force.rs  info.rs  mod.rs  password.rs  plc_control.rs  program.rs  read.rs  serve.rs  szl.rs  tag.rs  watch.rs  write.rs
