[package]
name = "snap7-partner"
version = "0.1.7"
edition = "2021"
description = "Async Rust S7 Partner (BSend/BRecv) peer implementation"
license = "MIT"
repository = "https://github.com/cool0looc/rs-snap7"
keywords = ["siemens", "s7", "plc", "industrial", "snap7"]
categories = ["network-programming", "embedded"]

[dependencies]
bytes = "1"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "time", "sync"] }

[dev-dependencies]
tokio-test = "0.4"
